@@ -159,6 +159,7 @@ MAX_AGE_PROB_ALIVE   = ('behavior', 'max-age-prob-alive', 1)
 MAX_SIB_AGE_DIFF     = ('behavior', 'max-sib-age-diff', 1)
 MIN_GENERATION_YEARS = ('behavior', 'min-generation-years', 1)
 AVG_GENERATION_GAP   = ('behavior', 'avg-generation-gap', 1)
+GENERATION_DEPTH     = ('behavior', 'generation-depth', 1)
 
 default_value = {
     DEFAULT_SOURCE       : False, 
@@ -274,4 +275,5 @@ default_value = {
     MAX_SIB_AGE_DIFF     : 20,
     MIN_GENERATION_YEARS : 13,
     AVG_GENERATION_GAP   : 20,
+    GENERATION_DEPTH     : 15,
 }
